# embd

./: .gitignore  README.md
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
api/lib/: compute.py  models.py
hop-embd/: package-lock.json  package.json
hop-embd/app/: error.tsx  globals.css  layout.tsx  page.tsx
hop-embd/app/about/: page.tsx
hop-embd/app/course/[courseId]/: page.tsx
hop-embd/app/search/: loading.tsx  page.tsx
hop-embd/lib/: types.ts
hop-embd/lib/chakra/: theme.ts
hop-embd/lib/components/About/: QuestionAnswer.tsx  styles.module.css
hop-embd/lib/components/Common/: Background.tsx  Header.tsx  PageWrapper.tsx  Providers.tsx  ResultsWrapper.tsx  styles.module.css
hop-embd/lib/components/Course/: Course.tsx  styles.module.css
hop-embd/lib/components/Modals/: MProvider.tsx  OptionsModal.tsx
hop-embd/lib/components/Search/: DisplayScreen.tsx  Factoid.tsx  Loader.tsx  LoadingScreen.tsx  QueryItem.tsx  SearchBar.tsx  SemesterOptions.tsx  styles.module.css
rip/: ann.py  db.py  duck.py  gen.sh  look.ipynb  main.py  models.py  pyproject.toml  reduction.ipynb  visual.py
