[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["TJ Bai <tjianbai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sentence-transformers = "^2.2.2"
annoy = "^1.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
