[tool.poetry]
name = "rip"
version = "0.1.0"
description = ""
authors = ["TJ Bai <tjianbai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sentence-transformers = "^2.2.2"
annoy = "^1.17.3"
requests = "^2.31.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.3.0"
mplcursors = "^0.5.2"
duckdb = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
